--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
             </div>
             <div class="post__info">
                 <a href="" class="category__button">Wild Life</a>
-                <h2 class="post__title"><a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, expedita?</a></h2>
+                <h2 class="post__title"><a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Minima, expedita?</a></h2>
                 <p class="post__body">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas provident magnam quis tenetur cupiditate saepe voluptatem ab? Unde maxime saepe quidem sint vel quae delectus illo, nulla voluptas! Minus, repudiandae.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas provident magnam quis tenetur
+                    cupiditate saepe voluptatem ab? Unde maxime saepe quidem sint vel quae delectus illo, nulla
+                    voluptas! Minus, repudiandae.
                 </p>
                 <div class="post__author">
                     <div class="post__author-avatar">
@@ -84,7 +87,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -107,7 +111,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -130,7 +135,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -153,7 +159,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -176,7 +183,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -199,7 +207,8 @@
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
                     <p class="post__body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat minima tenetur asperiores commodi ab odio et?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime veritatis, ducimus fugiat
+                        minima tenetur asperiores commodi ab odio et?
                     </p>
                     <div class="post__author">
                         <div class="post__author-avatar">
@@ -232,7 +241,57 @@
 
     <footer>
         <div class="footer__socials">
-            <a href="https://youtube.com/wikitricks" target="_blank"></a>
+            <a href="https://youtube.com/wikitricks" target="_blank"><i class="uil uil-youtube"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="uil uil-facebook"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin"></i></a>
+        </div>
+        <div class="container footer__container">
+            <article>
+                <h4>Categories</h4>
+                <ul>
+                    <li><a href="">Art</a></li>
+                    <li><a href="">Wild Life</a></li>
+                    <li><a href="">Travel</a></li>
+                    <li><a href="">Science & Technology</a></li>
+                    <li><a href="">Food</a></li>
+                    <li><a href="">Music</a></li>
+                </ul>
+            </article>
+            <article>
+                <h4>Support</h4>
+                <ul>
+                    <li><a href="">Online Support</a></li>
+                    <li><a href="">Call Numbers</a></li>
+                    <li><a href="">Emails</a></li>
+                    <li><a href="">Social Support</a></li>
+                    <li><a href="">Location</a></li>
+                </ul>
+            </article>
+            <article>
+                <h4>Blog</h4>
+                <ul>
+                    <li><a href="">Safety</a></li>
+                    <li><a href="">Repair</a></li>
+                    <li><a href="">Recent</a></li>
+                    <li><a href="">Popular</a></li>
+                    <li><a href="">Categories</a></li>
+                </ul>
+            </article>
+            <article>
+                <h4>Permalinks</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </article>
+        </div>
+        <div class="footer__copyright">
+            <small>Copyright &copy; 2023 | Wikitricks | All rights reserved</small>
         </div>
     </footer>
 </body>
