--- a/index.html
+++ b/index.html
@@ -294,6 +294,9 @@
             <small>Copyright &copy; 2023 | Wikitricks | All rights reserved</small>
         </div>
     </footer>
+
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
