--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="signin.html">Signin</a></li>
+                <!-- <li><a href="signin.html">Signin</a></li> -->
                 <li class="nav__profile">
                     <div class="avatar">
                         <img src="./images/avatar1.jpg" alt="">
@@ -52,7 +52,7 @@
                 <img src="./images/blog1.jpg">
             </div>
             <div class="post__info">
-                <a href="" class="category__button">Wild Life</a>
+                <a href="category-posts.html" class="category__button">Wild Life</a>
                 <h2 class="post__title"><a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Minima, expedita?</a></h2>
                 <p class="post__body">
@@ -82,7 +82,7 @@
                     <img src="./images/blog3.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
@@ -106,7 +106,7 @@
                     <img src="./images/blog4.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
@@ -130,7 +130,7 @@
                     <img src="./images/blog5.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
@@ -154,7 +154,7 @@
                     <img src="./images/blog6.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
@@ -178,7 +178,7 @@
                     <img src="./images/blog7.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
@@ -202,7 +202,7 @@
                     <img src="./images/blog8.jpg">
                 </div>
                 <div class="post__info">
-                    <a href="" class="category__button">Wild Life</a>
+                    <a href="category-posts.html" class="category__button">Wild Life</a>
                     <h3 class="post__title">
                         <a href="post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, rerum?</a>
                     </h3>
