--- a/signin.html
+++ b/signin.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Complete Blogging Website</title>
+
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" href="./style.css">
+
+    <!-- ICONSCOUT CDN -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+
+
+    <section class="form__section">
+        <div class="container form__section-container">
+            <h2>Sign In</h2>
+            <div class="alert__message success">
+                <p>This is a success message</p>
+            </div>
+            <form action="">
+                <input type="text" placeholder="Username or Email">
+                <input type="password" placeholder="Password">
+                <button type="submit" class="btn">Sign In</button>
+                <small>Don't have an account? <a href="signup.html">Sign Up</a></small>
+            </form>
+        </div>
+    </section>
 </body>
+
 </html>
