--- a/add-category.html
+++ b/add-category.html
@@ -54,7 +54,7 @@
             </div>
             <form action="">
                 <input type="text" placeholder="Title">
-                <textarea rows="4" placeholder="Description"></textarea>
+                <textarea style="resize:none" rows="4" placeholder="Description"></textarea>
                 <button type="submit" class="btn">Add Category</button>
             </form>
         </div>
