--- a/dashboard.html
+++ b/dashboard.html
@@ -69,7 +69,7 @@
                     </li>
                     <li>
                         <a href="manage-users.html"><i class="uil uil-users-alt"></i>
-                            <h5>Manage User</h5>
+                            <h5>Manage Users</h5>
                         </a>
                     </li>
                     <li>
@@ -89,36 +89,36 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Title</th>
-                            <th>Category</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
+                            <th align="center">Title</th>
+                            <th align="center">Category</th>
+                            <th align="center">Edit</th>
+                            <th align="center">Delete</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
                             <td>Wild Life</td>
-                            <td><a href="edit-post.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center"><a href="edit-post.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
                         </tr>
                         <tr>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
                             <td>Wild Life</td>
-                            <td><a href="edit-post.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center"><a href="edit-post.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
                         </tr>
                         <tr>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
                             <td>Wild Life</td>
-                            <td><a href="edit-post.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center"><a href="edit-post.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
                         </tr>
                         <tr>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
                             <td>Wild Life</td>
-                            <td><a href="edit-post.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center"><a href="edit-post.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
                         </tr>
                     </tbody>
                 </table>
