--- a/edit-category.html
+++ b/edit-category.html
@@ -51,7 +51,7 @@
             <h2>Edit Category</h2>
             <form action="">
                 <input type="text" placeholder="Title">
-                <textarea rows="4" placeholder="Description"></textarea>
+                <textarea style="resize:none" rows="4" placeholder="Description"></textarea>
                 <button type="submit" class="btn">Update Category</button>
             </form>
         </div>
