--- a/manage-users.html
+++ b/manage-users.html
@@ -69,7 +69,7 @@
                     </li>
                     <li>
                         <a href="manage-users.html" class="active"><i class="uil uil-users-alt"></i>
-                            <h5>Manage User</h5>
+                            <h5>Manage Users</h5>
                         </a>
                     </li>
                     <li>
@@ -89,34 +89,34 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Username</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
-                            <th>Admin</th>
+                            <th align="center">Name</th>
+                            <th align="center">Username</th>
+                            <th align="center">Edit</th>
+                            <th align="center">Delete</th>
+                            <th align="center">Admin</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>Nishat Mahmud</td>
                             <td>nishat</td>
-                            <td><a href="edit-user.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
-                            <td>Yes</td>
+                            <td align="center"><a href="edit-user.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center">Yes</td>
                         </tr>
                         <tr>
                             <td>Rizwan Hasan</td>
                             <td>rizwan</td>
-                            <td><a href="edit-user.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
-                            <td>No</td>
+                            <td align="center"><a href="edit-user.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center">No</td>
                         </tr>
                         <tr>
                             <td>Safwan Hasan</td>
                             <td>safwan</td>
-                            <td><a href="edit-user.html" class="btn sm">Edit</a></td>
-                            <td><a href="delete-category.html" class="btn sm danger">Delete</a></td>
-                            <td>No</td>
+                            <td align="center"><a href="edit-user.html" class="btn sm">Edit</a></td>
+                            <td align="center"><a href="delete-category.html" class="btn sm danger">Delete</a></td>
+                            <td align="center">No</td>
                         </tr>
                     </tbody>
                 </table>
